[tool.poetry]
name = "example-bot"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "example_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
requests = "^2.28.1"
urllib3 = "^1.26.12"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"